--- a/Math1431/sec-section11.html
+++ b/Math1431/sec-section11.html
@@ -14,7 +14,7 @@
 <!--******************************************-->
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Linear Equations</title>
+<title>PC1 Linear Equations</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
@@ -113,10 +113,12 @@ eBookConfig.enable_chatcodes =  false;
 </script>
 </head>
 <body class="pretext book ignore-math">
-<a class="assistive" href="#ptx-content">[skip-to-content]</a><header id="ptx-masthead" class="ptx-masthead"><div class="ptx-banner"><div class="title-container">
+<a class="assistive" href="#ptx-content">[skip-to-content]</a><header id="ptx-masthead" class="ptx-masthead"><div class="ptx-banner">
+<a id="logo-link" class="logo-link" target="_blank" href="https://www.cod.edu"><img src="external/images/cod-logo.png" alt="Logo image"></a><div class="title-container">
 <h1 class="heading"><a href="math1431.html"><span class="title">Math 1431: Pre-Calculus I</span></a></h1>
 <p class="byline"></p>
-</div></div></header><nav id="ptx-navbar" class="ptx-navbar navbar"><div class="ptx-navbar-contents">
+</div>
+</div></header><nav id="ptx-navbar" class="ptx-navbar navbar"><div class="ptx-navbar-contents">
 <button class="toc-toggle button" title="[toc]"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5d2;</span><span class="name">[toc]</span></button><div class="searchbox">
 <div class="searchwidget"><button id="searchbutton" class="searchbutton button" type="button" title="Search book"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe8b6;</span><span class="name">Search Book</span></button></div>
 <div id="searchresultsplaceholder" class="searchresultsplaceholder" style="display: none">
@@ -128,8 +130,10 @@ eBookConfig.enable_chatcodes =  false;
 <ol id="searchresults" class="searchresults"></ol>
 </div>
 </div>
-<span class="nav-other-controls"><button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="chap-1.html" title="[previous]"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">[previous-short]</span></a><a class="up-button button" href="chap-1.html" title="[up]"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">[up-short]</span></a><a class="next-button button" href="backmatter.html" title="[next]"><span class="name">[next-short]</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
-</div></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(
+<span class="nav-other-controls"><button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="chapter-1.html" title="[previous]"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">[previous-short]</span></a><a class="up-button button" href="chapter-1.html" title="[up]"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">[up-short]</span></a><a class="next-button button" href="math1431-3.html" title="[next]"><span class="name">[next-short]</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
+</div></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\newcommand{\R}{\mathbb{R}}
+\newcommand{\Q}{\mathbb{Q}}
+\newcommand{\Z}{\mathbb{Z}}
 \newcommand{\lt}{&lt;}
 \newcommand{\gt}{&gt;}
 \newcommand{\amp}{&amp;}
@@ -138,32 +142,57 @@ eBookConfig.enable_chatcodes =  false;
 \)</span></div>
 <div class="ptx-page">
 <div id="ptx-sidebar" class="ptx-sidebar"><nav id="ptx-toc" class="ptx-toc depth2 focused" data-preexpanded-levels="0" data-max-levels="2"><ul class="structural toc-item-list contains-active">
-<li class="toc-item toc-frontmatter">
-<div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">[frontmatter]</span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-preface"><div class="toc-title-box"><a href="preface.html" class="internal"><span class="title">[preface]</span></a></div></li></ul>
-</li>
 <li class="toc-item toc-chapter contains-active">
-<div class="toc-title-box"><a href="chap-1.html" class="internal"><span class="codenumber">1</span> <span class="title">Chapter 1</span></a></div>
-<ul class="structural toc-item-list contains-active"><li class="toc-item toc-section active"><div class="toc-title-box"><a href="sec-section11.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Linear Equations</span></a></div></li></ul>
+<div class="toc-title-box"><a href="chapter-1.html" class="internal"><span class="codenumber">1</span> <span class="title">Chapter 1</span></a></div>
+<ul class="structural toc-item-list contains-active"><li class="toc-item toc-section contains-active">
+<div class="toc-title-box"><a href="sec-section11.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Linear Equations</span></a></div>
+<ul class="structural toc-item-list active"><li class="toc-item toc-subsection"><div class="toc-title-box"><a href="sec-section11.html#subsec-solving-linear" class="internal"><span class="codenumber">1.1.1</span> <span class="title">Solving Linear Equations</span></a></div></li></ul>
+</li></ul>
 </li>
 <li class="toc-item toc-backmatter">
-<div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">[backmatter]</span></a></div>
+<div class="toc-title-box"><a href="math1431-3.html" class="internal"><span class="title">[backmatter]</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-solutions"><div class="toc-title-box"><a href="solutions.html" class="internal"><span class="codenumber">A</span> <span class="title">Selected Solutions</span></a></div></li>
-<li class="toc-item toc-references"><div class="toc-title-box"><a href="references.html" class="internal"><span class="title">References</span></a></div></li>
+<li class="toc-item toc-solutions"><div class="toc-title-box"><a href="math1431-3-1.html" class="internal"><span class="codenumber">A</span> <span class="title">Selected Solutions</span></a></div></li>
+<li class="toc-item toc-references"><div class="toc-title-box"><a href="math1431-3-2.html" class="internal"><span class="title">References</span></a></div></li>
 </ul>
 </li>
 </ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="sec-section11"><h2 class="heading hide-type">
 <span class="type">[section]</span><span class="space heading-divison-mark heading-divison-mark__space"> </span><span class="codenumber">1.1</span><span class="space heading-divison-mark heading-divison-mark__space"> </span><span class="title">Linear Equations</span>
 </h2>
-<div class="para" id="sec-section11-2">Your content here...<div class="autopermalink" data-description="[p]"><a href="#sec-section11-2" title="[permalink-tooltip] [p]" aria-label="[permalink-tooltip] [p]">🔗</a></div>
+<section class="subsection" id="subsec-solving-linear"><h3 class="heading hide-type">
+<span class="type">[subsection]</span><span class="space heading-divison-mark heading-divison-mark__space"> </span><span class="codenumber">1.1.1</span><span class="space heading-divison-mark heading-divison-mark__space"> </span><span class="title">Solving Linear Equations</span>
+</h3>
+<div class="para" id="subsec-solving-linear-2">A linear equation is an equation where the variable appears only to the first power. The general form of a linear equation is <span class="process-math">\(ax + b = 0\text{,}\)</span> where <span class="process-math">\(a\)</span> and <span class="process-math">\(b\)</span> are constants and <span class="process-math">\(a \neq 0\text{.}\)</span><div class="autopermalink" data-description="[p]"><a href="#subsec-solving-linear-2" title="[permalink-tooltip] [p]" aria-label="[permalink-tooltip] [p]">🔗</a></div>
 </div>
-<div class="para" id="sec-section11-3">You can use math: <span class="process-math">\(f(x) = x^2\)</span><div class="autopermalink" data-description="[p]"><a href="#sec-section11-3" title="[permalink-tooltip] [p]" aria-label="[permalink-tooltip] [p]">🔗</a></div>
+<details id="ex-linear1" class="example example-like born-hidden-knowl"><summary class="knowl__link"><h4 class="heading">
+<span class="type">[example]</span><span class="space heading-divison-mark heading-divison-mark__space"> </span><span class="codenumber">1.1.1</span><span class="period heading-divison-mark heading-divison-mark__period">.</span>
+</h4></summary><article class="example example-like knowl__content"><div class="para" id="ex-linear1-1-1">Solve the equation: <span class="process-math">\(2x + 3 = 7\)</span><div class="autopermalink" data-description="[p]"><a href="#ex-linear1-1-1" title="[permalink-tooltip] [p]" aria-label="[permalink-tooltip] [p]">🔗</a></div>
 </div>
-<div class="autopermalink" data-description="[section] 1.1: Linear Equations"><a href="#sec-section11" title="[permalink-tooltip] [section] 1.1: Linear Equations" aria-label="[permalink-tooltip] [section] 1.1: Linear Equations">🔗</a></div></section></div>
+<div class="solutions"><details id="ex-linear1-2" class="solution solution-like born-hidden-knowl"><summary class="knowl__link"><span class="type">[solution]</span><span class="period heading-divison-mark heading-divison-mark__period">.</span></summary><div class="solution solution-like knowl__content">
+<div class="para logical" id="ex-linear1-2-1">
+<div class="para">We solve this step by step:</div>
+<ul class="disc" id="ex-linear1-2-1-1">
+<li id="ex-linear1-2-1-1-1">
+<div class="para" id="ex-linear1-2-1-1-1-1">Subtract 3 from both sides: <span class="process-math">\(2x = 4\)</span><div class="autopermalink" data-description="[p]"><a href="#ex-linear1-2-1-1-1-1" title="[permalink-tooltip] [p]" aria-label="[permalink-tooltip] [p]">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="[li]"><a href="#ex-linear1-2-1-1-1" title="[permalink-tooltip] [li]" aria-label="[permalink-tooltip] [li]">🔗</a></div>
+</li>
+<li id="ex-linear1-2-1-1-2">
+<div class="para" id="ex-linear1-2-1-1-2-1">Divide both sides by 2: <span class="process-math">\(x = 2\)</span><div class="autopermalink" data-description="[p]"><a href="#ex-linear1-2-1-1-2-1" title="[permalink-tooltip] [p]" aria-label="[permalink-tooltip] [p]">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="[li]"><a href="#ex-linear1-2-1-1-2" title="[permalink-tooltip] [li]" aria-label="[permalink-tooltip] [li]">🔗</a></div>
+</li>
+</ul>
+<div class="para">Therefore, the solution is <span class="process-math">\(x = 2\text{.}\)</span>
+</div>
+<div class="autopermalink" data-description="[p]"><a href="#ex-linear1-2-1" title="[permalink-tooltip] [p]" aria-label="[permalink-tooltip] [p]">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="[solution] 1.1.1.1"><a href="#ex-linear1-2" title="[permalink-tooltip] [solution] 1.1.1.1" aria-label="[permalink-tooltip] [solution] 1.1.1.1">🔗</a></div>
+</div></details></div>
+<div class="autopermalink" data-description="[example] 1.1.1"><a href="#ex-linear1" title="[permalink-tooltip] [example] 1.1.1" aria-label="[permalink-tooltip] [example] 1.1.1">🔗</a></div></article></details><div class="autopermalink" data-description="[subsection] 1.1.1: Solving Linear Equations"><a href="#subsec-solving-linear" title="[permalink-tooltip] [subsection] 1.1.1: Solving Linear Equations" aria-label="[permalink-tooltip] [subsection] 1.1.1: Solving Linear Equations">🔗</a></div></section><div class="autopermalink" data-description="[section] 1.1: Linear Equations"><a href="#sec-section11" title="[permalink-tooltip] [section] 1.1: Linear Equations" aria-label="[permalink-tooltip] [section] 1.1: Linear Equations">🔗</a></div></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
-<a class="previous-button button" href="chap-1.html" title="[previous]"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">[previous-short]</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="backmatter.html" title="[next]"><span class="name">[next-short]</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
+<a class="previous-button button" href="chapter-1.html" title="[previous]"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">[previous-short]</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="math1431-3.html" title="[next]"><span class="name">[next-short]</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer" class="ptx-page-footer">
